--- a/clusters/gke-cluster/nginx-helmrelease.yaml
+++ b/clusters/gke-cluster/nginx-helmrelease.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: default
 spec:
   releaseName: nginx
+  interval: 5m0s  # This is the field that was missing
   chart:
     spec:
       chart: nginx
